Closed Bug 1689573 Opened 5 years ago Closed 5 years ago

`WidgetKeyboardEvent::GetCommandStr` may crash

Categories

(Core :: DOM: UI Events & Focus Handling, defect, P2)

defect

Tracking

()

RESOLVED FIXED
87 Branch
Tracking Status
firefox87 --- fixed

People

(Reporter: masayuki, Assigned: masayuki)

Details

Attachments

(1 file)

I don't see any crash reports actually, but this bug may cause kicking wrong command.

No longer blocks: 1301497
Pushed by masayuki@d-toybox.com: https://hg.mozilla.org/integration/autoland/rev/8bb13536c8ee Make `WidgetKeyboardEvent::GetCommandStr()` map empty string to commands never executed r=smaug
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 87 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: