Bug 1689573 - Make `WidgetKeyboardEvent::GetCommandStr()` map empty string to commands never executed r=smaug

Not mapping them causes creating shorter command list than expected.

Differential Revision: https://phabricator.services.mozilla.com/D103465